--- a/main/jemdoc_old.css
+++ b/main/jemdoc_old.css
@@ -1,22 +1,17 @@
 /* Default css file for jemdoc. */
 
 table#tlayout {
-    border: none;
-    border-collapse: collapse;
-    background: white;
+	border: none;
+	border-collapse: separate;
+	background: white;
 }
 
 body {
 	background: white;
-    /* font-family: Verdana, Helvetica, Arial, sans-serif; /*
-	/*font-family: Monaco, Menlo, Consolas, "Courier New", monospace;*/
-	font-family: Optima, Candara, Calibri, Arial, sans-serif;
-	padding-top: 0em;
+	font-family: Georgia, serif;
 	padding-bottom: 8px;
-	font-size: 15px;
-    line-height:1.4;
 	margin: 0;
-    font-size: 1.1em;
+	font-size: 1.2em;
 }
 
 #layout-menu {
@@ -28,23 +23,25 @@ body {
 	font-size: 1.0em;
 	width: auto;
 	white-space: nowrap;
-    text-align: left;
-    vertical-align: top;
+	text-align: left;
+	vertical-align: top;
 }
 
 #layout-menu td {
 	background: #f4f4f4;
-    vertical-align: top;
+	vertical-align: top;
 }
 
 #layout-content {
-	padding-top: 1.0em;
-	padding-left: 1.25em;
+	padding-top: 0.0em;
+	padding-left: 1.0em;
 	padding-right: 1.0em;
-    border: none;
-    background: white;
-    text-align: left;
-    vertical-align: top;
+	border: none;
+	background: white;
+	text-align: left;
+	vertical-align: top;
+	min-width: 100%;
+	width: 100%;
 }
 
 #layout-menu a {
@@ -53,33 +50,29 @@ body {
 }
 
 tt {
-    background: #ffffdd;
+	background: #ffffdd;
 }
 
 pre, tt {
-	font-size: 100%;
+	font-size: 90%;
 	font-family: monaco, monospace;
 }
 
 a, a > tt {
-	color: #0000FF;
-	/*text-decoration: none; */
+	color: #224b8d;
+	text-decoration: none;
 }
 
 a:hover {
 	border-bottom: 1px gray dotted;
 }
 
-#layout-content a:visited {
-	color: #551A8B;
-}
-
 #layout-menu a.current:link, #layout-menu a.current:visited {
-	color: #800080; 
+	color: #022b6d;
 	border-bottom: 1px gray solid;
 }
 #layout-menu a:link, #layout-menu a:visited, #layout-menu a:hover {
-	color: #800080;
+	color: #527bbd;
 	text-decoration: none;
 }
 #layout-menu a:hover {
@@ -127,7 +120,7 @@ strong {
 
 
 h1, h2, h3 {
-	/*color: #527bbd; */
+	color: #527bbd;
 	margin-top: 0.7em;
 	margin-bottom: 0.3em;
 	padding-bottom: 0.2em;
@@ -137,23 +130,20 @@ h1, h2, h3 {
 }
 
 h1 {
-	/*color: #527bbd; */
-	font-size: 220%;
+	font-size: 165%;
 }
 
 h2 {
-	/*color: #5e8cd6;   /* color of the title at == in index.jemdoc*/
 	padding-top: 0.8em;
-	font-size: 150%;
+	font-size: 125%;
 }
 
 h2 + h3 {
-    padding-top: 0.2em;
+	padding-top: 0.2em;
 }
 
 h3 {
-	/*color: #5e8cd6;*/
-	font-size: 125%;
+	font-size: 110%;
 	border-bottom: none;
 }
 
@@ -161,13 +151,11 @@ p {
 	margin-top: 0.0em;
 	margin-bottom: 0.8em;
 	padding: 0;
-	font-size: %110
 	line-height: 1.3;
 }
 
 pre {
 	padding: 0;
-	font-size: %90
 	margin: 0;
 }
 
@@ -312,7 +300,10 @@ span.comment, span.comment > *, span.string, span.string > * {
 }
 
 @media print {
-	#layout-menu { display: none; }
+	#layout-menu {
+		display: none;
+	}
+
 }
 
 #fwtitle {
@@ -351,32 +342,32 @@ img.eqwl {
 }
 
 table {
-    border: 2px solid black;
-    border-collapse: collapse;
+	border: 2px solid black;
+	border-collapse: collapse;
 }
 
 td {
-    padding: 2px;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    text-align: center;
-    border: 1px solid gray;
+	padding: 2px;
+	padding-left: 0.5em;
+	padding-right: 0.5em;
+	text-align: center;
+	border: 1px solid gray;
 }
 
 table + table {
-    margin-top: 1em;
+	margin-top: 1em;
 }
 
 tr.heading {
-    font-weight: bold;
-    border-bottom: 2px solid black;
+	font-weight: bold;
+	border-bottom: 2px solid black;
 }
 
 img {
-    border: none;
+	border: none;
 }
 
 table.imgtable, table.imgtable td {
-    border: none;
-    text-align: left;
+	border: none;
+	text-align: left;
 }
