modify font size and margin

--- a/public/jemdoc.css
+++ b/public/jemdoc.css
@@ -15,8 +15,8 @@ body {
 	padding-bottom: 8px;
 	font-size: 15px;
     line-height:1.4;
-	margin: 0;
-    font-size: 1.1em;
+	margin: 0 10em;
+    font-size: 1.2em;
 }
 
 #layout-menu {
